@@ -1,3 +1,6 @@
+8 June 2011: Wouter
+	- nsd reads the zonelist file on start.
+
 7 June 2011: Wouter
 	- code to add and remove zonelist entries, and unit test.
 
